<resources>
    <string name="app_name">RecordMe</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="start_service">Start Service</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="stop_service">Stop Service</string>
    <string name="record">Record</string>
    <string name="pause">Pause</string>
    <string name="recorder">Recorder</string>
</resources>